[gd_scene load_steps=6 format=3 uid="uid://bxmo6naqglb8q"]

[ext_resource type="PackedScene" uid="uid://l6ifjsq4hmmm" path="res://Map/MapLevelCard/MapLevelCard.tscn" id="1_21kyf"]
[ext_resource type="Script" path="res://Map/MapCard.gd" id="1_gth7k"]

[sub_resource type="Animation" id="Animation_iwjwu"]
resource_name = "to_bottom"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/ScrollContainer:scroll_vertical")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 2258]
}

[sub_resource type="Animation" id="Animation_nr3vf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/ScrollContainer:scroll_vertical")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d2oao"]
_data = {
"RESET": SubResource("Animation_nr3vf"),
"to_bottom": SubResource("Animation_iwjwu")
}

[node name="MapCard" type="Node"]
script = ExtResource("1_gth7k")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ScrollContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="MapLevelCard15" parent="UI/ScrollContainer/VBoxContainer" instance=ExtResource("1_21kyf")]
layout_mode = 2
level = 15

[node name="MapLevelCard14" parent="UI/ScrollContainer/VBoxContainer" instance=ExtResource("1_21kyf")]
layout_mode = 2
level = 14

[node name="MapLevelCard13" parent="UI/ScrollContainer/VBoxContainer" instance=ExtResource("1_21kyf")]
layout_mode = 2
level = 13

[node name="MapLevelCard12" parent="UI/ScrollContainer/VBoxContainer" instance=ExtResource("1_21kyf")]
layout_mode = 2
level = 12

[node name="MapLevelCard11" parent="UI/ScrollContainer/VBoxContainer" instance=ExtResource("1_21kyf")]
layout_mode = 2
level = 11

[node name="MapLevelCard10" parent="UI/ScrollContainer/VBoxContainer" instance=ExtResource("1_21kyf")]
layout_mode = 2
level = 10

[node name="MapLevelCard9" parent="UI/ScrollContainer/VBoxContainer" instance=ExtResource("1_21kyf")]
layout_mode = 2
level = 9

[node name="MapLevelCard8" parent="UI/ScrollContainer/VBoxContainer" instance=ExtResource("1_21kyf")]
layout_mode = 2
level = 8

[node name="MapLevelCard7" parent="UI/ScrollContainer/VBoxContainer" instance=ExtResource("1_21kyf")]
layout_mode = 2
level = 7

[node name="MapLevelCard6" parent="UI/ScrollContainer/VBoxContainer" instance=ExtResource("1_21kyf")]
layout_mode = 2
level = 6

[node name="MapLevelCard5" parent="UI/ScrollContainer/VBoxContainer" instance=ExtResource("1_21kyf")]
layout_mode = 2
level = 5

[node name="MapLevelCard4" parent="UI/ScrollContainer/VBoxContainer" instance=ExtResource("1_21kyf")]
layout_mode = 2
level = 4

[node name="MapLevelCard3" parent="UI/ScrollContainer/VBoxContainer" instance=ExtResource("1_21kyf")]
layout_mode = 2
level = 3

[node name="MapLevelCard2" parent="UI/ScrollContainer/VBoxContainer" instance=ExtResource("1_21kyf")]
layout_mode = 2
level = 2

[node name="MapLevelCard1" parent="UI/ScrollContainer/VBoxContainer" instance=ExtResource("1_21kyf")]
layout_mode = 2
level = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d2oao")
}
